# OSLAroused-SKSE

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  Hooks.h  PersistedData.h  RuntimeEvents.cpp  RuntimeEvents.h  Settings.h  main.cpp
src/Integrations/: DevicesIntegration.cpp
src/Managers/: ActorStateManager.cpp  ActorStateManager.h  ArousalManager.cpp  ArousalManager.h  LibidoManager.cpp
src/Papyrus/: PapyrusActor.cpp  PapyrusActor.h  PapyrusConfig.cpp  PapyrusInterface.cpp
src/Utilities/: LRUCache.h  Ticker.h  Utility.h  Utils.cpp  Utils.h
